--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,258 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+.container {
+  width: 1240px;
+  margin: 0 auto;
+}
+h1, h2, h3, h4, h5, h6 {
+  font-family: Gilroy;
+}
+.header {
+  background-color: #2D82BE;
+  padding:20px 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.input {
+  width: 575px;
+  height: 40px;
+  border-radius:11px ;
+  padding-left: 14px;
+  border: none;
+}
+.menu {
+  display: flex;
+  align-items: center;
+  gap:15px;
+  background-color: #3532c5;
+  border-radius: 20px;
+  padding: 14px 25px;
+  color: white;
+}
+.hed-text {
+  color: white;
+  display: flex;
+  flex-direction: column;
+}
+
+.Category {
+  margin: 20px 0 49px 0;
+}
+.png {
+  display: flex;
+  gap: 45px;
+  margin: 20px 49px;
+}
+h1 {
+  font-size:25px
+}
+h3 {
+  font-size:15px
+}
+span {
+  color: grey;
+  font-size: 13px;
+}
+.col-1 {
+  width: 13.6%;
+  padding:15px;
+}
+.col-2 {
+  width:16.66%;
+  padding:15px ;
+  height: 100%;
+}
+.col-4 {
+  width:33.33%;
+  padding:15px;
+}
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+.img {
+  padding-top: 36px;
+}
+.gre-span {
+  color: #82CF6F;
+  display: flex;
+
+}
+.h3 {
+  font-size:14px;
+  margin:4px 0 22px 0;
+}
+.h4 {
+  font-size: 19px;
+  font-weight: 700;
+  margin: 4px 0;
+}
+.h6 {
+  font-size:24px
+}
+.button {
+  border: none;
+  width: 25px;
+  height: 25px;
+}
+.buy {
+  display: flex;
+  justify-content: space-between;
+}
+button{
+  cursor: pointer;
+}
+.svg {
+  color: white;
+}
+.svg:hover {
+  background-color: #2D82BE;
+
+  border-radius: 50%;
+  transition: 0.7s;
+}
+.heat {
+  margin: 55px 0 30px 0;
+}
+.card {
+  display: flex;
+}
+.text-card {
+  display: flex;
+  flex-direction: column;
+}
+
+.span-blu {
+  color: #3286C2;
+  display: flex;
+  align-items: center;
+  gap: 6px;
+  margin: 6px 0 11px 0;
+}
+.pagination {
+  display: flex;
+  justify-content: center;
+}
+.auk {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 50px 0 18px 0;
+}
+.hh6 {
+  font-size: 18px;
+}
+.hiro {
+  display: flex;
+  justify-content: space-between;
+}
+.blu {
+  color: #0063A9;
+}
+.but {
+  border: none;
+  background-color: #0063A9;
+  border-radius: 11px;
+  padding:8px 24px;
+  color: #fff;
+  z-index: 1;
+}
+.svg-c {
+margin-top: -22px;
+}
+.h4-red {
+  color: red;
+}
+.sp-12 {
+  color: #808080;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 700;
+  line-height: normal;
+  text-decoration-line:spelling-error;
+}
+.ff {
+  display: flex;
+}
+.adres-h4 {
+  display: flex;
+  margin: 34px 0 22px 0;
+  gap:8px;
+}
+.Kyrg {
+  width: 190px;
+}
+.time {
+  display: flex;
+  gap:9px;
+}
+.do {
+  display: flex;
+  justify-content: space-between;
+}
+.footer {
+  background: linear-gradient(107deg, #3186C3 6.46%, #004F86 68.08%);
+  display: flex;
+  justify-content: space-between;
+  padding-top: 74px;
+  margin-top: 50px;
+}
+.footer-img {
+  margin: 0px 0 42px 0;
+}
+.p {
+  color: #FFF;
+  font-family: Poppins;
+  font-size: 14px;
+  font-weight: 400;
+  line-height: 150%;
+  width: 230px;
+  margin-bottom: 72px;
+}
+.install {
+  display: flex;
+  gap:18px;
+}
+.Ad-white {
+  color: #fff;
+  margin-top: 14px;
+}
+.ad {
+  font-size: 20px;
+  margin-bottom: 40px;
+}
+.h5 {
+  font-size: 15px;
+}
+.flex {
+  display: flex;
+  justify-content: space-between;
+}
+.watssap {
+  margin-top:40px;
+}
+.footer-h5 {
+  color: grey;
+  font-family: Gilroy;
+  font-size: 14px;
+}
+.footer-text {
+  display: flex;
+  justify-content: space-between;
+  border-top:2px solid grey ;
+  align-items: center;
+margin-top: 105px;
+}
+.masange {
+  gap:15px;
+  display: flex;
+  margin: 30px 0 ;
+}
